// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectField > matches snapshots > when closed 1`] = `
<DocumentFragment>
  <div
    class="sc-feUYzb laLtyR aje-select"
  >
    <div
      aria-hidden="true"
      data-a11y-ignore="aria-hidden-focus"
      data-react-aria-prevent-focus="true"
      data-testid="hidden-select-container"
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <input
        style="font-size: 16px;"
        tabindex="-1"
        type="text"
      />
      <label>
        <select
          tabindex="-1"
        >
          <option />
          <option
            value="react-aria-1"
          >
            Item 1
          </option>
          <option
            value="react-aria-2"
          >
            Item 2
          </option>
          <option
            value="react-aria-3"
          >
            Item 3
          </option>
        </select>
      </label>
    </div>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r7:"
      class="sc-jEABJj sc-ikkyvV jWspfU cUocHZ aje-btn sc-dAbbbq jfTZFM aje-btn--dropdown is-medium"
      id="react-aria-:r2:"
      type="button"
    >
      <span
        class="sc-fUnNpA iyHtdr"
        id="react-aria-:r7:"
      />
      <i
        aria-hidden="true"
        class="sc-aYaIB chtYzR aje-icon material-icons is-medium"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SelectField > matches snapshots > when open 1`] = `
<DocumentFragment>
  <div
    class="sc-feUYzb laLtyR aje-select"
  >
    <div
      aria-hidden="true"
      data-a11y-ignore="aria-hidden-focus"
      data-react-aria-prevent-focus="true"
      data-testid="hidden-select-container"
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <input
        style="font-size: 16px;"
        tabindex="-1"
        type="text"
      />
      <label>
        <select
          tabindex="-1"
        >
          <option />
          <option
            value="react-aria-1"
          >
            Item 1
          </option>
          <option
            value="react-aria-2"
          >
            Item 2
          </option>
          <option
            value="react-aria-3"
          >
            Item 3
          </option>
        </select>
      </label>
    </div>
    <button
      aria-controls="react-aria-:r9:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:rf:"
      class="sc-jEABJj sc-ikkyvV jWspfU cUocHZ aje-btn sc-dAbbbq jfTZFM aje-btn--dropdown is-medium"
      data-pressed="true"
      id="react-aria-:ra:"
      type="button"
    >
      <span
        class="sc-fUnNpA iyHtdr"
        id="react-aria-:rf:"
      />
      <i
        aria-hidden="true"
        class="sc-aYaIB chtYzR aje-icon material-icons is-medium"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;
